--- a/style.css
+++ b/style.css
@@ -1,4 +1,37 @@
-body {background-color:tan;}
-h1{color:green;}
-
-
+body {
+    background-color:black;
+    font-family:arial;
+    color:white;
+    position: relative;
+  }
+  
+  body::after {
+    content: '';
+    display: block;
+    height: 50px; /* Set same as footer's height */
+  }
+  
+  footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+  }
+  
+  h1{
+    color:grey;
+    font-family:verdana;
+  }
+  
+  #maindiv {
+    background-color: white;
+    color: black;
+    width: 300px;
+    padding: 20px;
+    border-radius: 25px;
+    position: absolute;
+    left: 50%;
+    
+    margin-left: -150px;
+    
+    text-align: left;
+  }
